# r2d2

./: .gitignore  AGENTS.md  ANALYSIS_SETUP_REVIEW.md  CLAUDE.md  Dockerfile.backend  Dockerfile.compiler  Dockerfile.frontend  Dockerfile.gef  PRD.md  README.md  docker-compose.yml  pyproject.toml  setup.md
.github/workflows/: ci.yml  release.yml
config/: cloud_config.example.toml  default_config.toml
docs/: MCP_SERVICES.md  REPORTING.md
docs/plans/: 2026-01-27-unified-tool-execution.md
ghidra/extensions/r2d2/: build.gradle  extension.properties  settings.gradle
ghidra/extensions/r2d2/scripts/: R2D2Headless.java
samples/c/: crypto_simple.c  fibonacci.c  hello.c  structs.c  syscalls.c  vulnerable.c
schemas/: analysis_bundle.schema.json
scripts/: bootstrap_ghidra_extension.sh  check_setup.py  detect_env.py  dry_run.sh  run_backend.sh  run_frontend.sh  setup.sh  setup_backend.sh  setup_compiler.sh  setup_frontend.sh  test_ghidra_bridge.py
src/r2d2/: __init__.py  __main__.py  cli.py  config.py  logging.py  state.py
src/r2d2/adapters/: __init__.py  angr.py  angr_mcp.py  autoprofile.py  base.py  capstone.py  dwarf.py  firmware.py  frida.py  gef.py  ghidra.py  ghidra_bridge_client.py  ghidra_mcp.py  libmagic.py  radare2.py
src/r2d2/analysis/: __init__.py  graph.py  investigation_graph.py  orchestrator.py  resource_tree.py  runtime_requirements.py
src/r2d2/analysis/pipelines/: __init__.py
src/r2d2/compilation/: __init__.py  compiler.py  sniffer.py
src/r2d2/environment/: __init__.py  detectors.py  ghidra.py  ghidra_setup.py  mcp_launcher.py
src/r2d2/llm/: __init__.py  claude_client.py  manager.py  ollama_client.py  openai_client.py
src/r2d2/storage/: __init__.py  chat.py  dao.py  db.py  models.py
src/r2d2/tools/: __init__.py  executor.py  models.py  validator.py
src/r2d2/utils/: __init__.py  progress.py  serialization.py
src/r2d2/web/: __init__.py  app.py  debug.py  server.py
tests/: conftest.py  test_analysis_orchestrator.py  test_chat_dao.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_analysis_pipeline.py  test_api.py  test_compiler.py
tests/unit/: __init__.py  test_adapters.py  test_analysis_orchestrator.py  test_config.py  test_environment_mcp.py  test_firmware_adapter.py  test_ghidra_bridge.py  test_ghidra_mcp_adapter.py  test_ghidra_setup.py  test_graph_contracts.py  test_mcp_launcher.py  test_ollama_models.py  test_resource_tree.py  test_script_validator.py  test_storage.py  test_tool_executor.py  test_tool_models.py  test_web_context.py  test_web_tools_api.py
web/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  debug.ts  main.tsx  styles.css  theme.ts  themeMode.ts  toolCatalog.ts  types.ts
web/frontend/src/__tests__/: ActivityContext.test.tsx  AnalysisSummary.test.tsx  App.test.tsx  ChatPanel.test.tsx  CompilerPanel.test.tsx  ComplexitySlider.test.tsx  DWARFPanel.test.tsx  DisassemblyViewer.test.tsx  FirmwareTriagePanel.test.tsx  GraphExplorer.test.tsx  HexViewer.test.tsx  ProgressLog.test.tsx  ResultViewer.test.tsx  ScriptExecutionBlock.test.tsx  SessionList.test.tsx  SettingsDrawer.test.tsx  ToolAttribution.test.tsx  ToolStatusBar.test.tsx
web/frontend/src/components/: AnalysisDetails.tsx  AnalysisSummary.tsx  AutoProfilePanel.tsx  CFGViewer.tsx  ChatPanel.tsx  CitedAddress.tsx  CodeEditor.tsx  CompilerPanel.tsx  ComplexitySlider.tsx  DWARFPanel.tsx  DecompilerPanel.tsx  DisassemblyViewer.tsx  FirmwareTriagePanel.tsx  GEFPanel.tsx  GhidraScriptingPanel.tsx  GraphExplorer.tsx  HexViewer.tsx  ListingView.tsx  MarkdownRenderer.tsx  PanelLayout.tsx  ProgressLog.tsx  ResultViewer.tsx  ScriptExecutionBlock.tsx  SessionList.tsx  SettingsDrawer.tsx  ToolAttribution.tsx  ToolStatusBar.tsx  TrajectoryPanel.tsx
web/frontend/src/contexts/: ActivityContext.tsx
web/frontend/src/test/: setup.ts
web/frontend/src/trajectory/: TrajectoryContext.tsx  TrajectoryStore.ts  index.ts
(+3 files in other folders)
