[project]
name = "r2d2"
version = "0.1.0"
description = "Binary analysis copilot CLI for rapid ELF triage and deep dives"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "r2d2 Team", email = "eng@r2d2.invalid" }
]
dependencies = [
  "typer>=0.15,<1",
  "rich>=13.7,<14",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "httpx>=0.27,<0.28",
  "openai>=1.30,<2",
  "anthropic>=0.29,<1",
  "sqlalchemy>=2.0,<3",
  "sqlite-utils>=3.36,<4",
  "Flask>=3.0,<4",
  "flask-cors>=4.0,<5",
  "python-dotenv>=1.0,<2",
  "ghidra-bridge>=1.0.0",
  "pyelftools>=0.29,<0.32",
]

[project.optional-dependencies]
analyzers = [
  "r2pipe>=1.9.0,<2",
  "capstone>=5.0.1,<6",
  "python-magic>=0.4.27,<0.5",
  "angr>=9.2,<10",
  "frida>=16.0.0",
  "frida-tools>=12.0.0",
]
ghidra = [
  # ghidra-bridge for connecting to Ghidra GUI (optional, for richer analysis)
  "ghidra-bridge @ git+https://github.com/justfoxing/ghidra_bridge",
]
tui = [
  "textual>=0.56,<0.60"
]

[project.urls]
homepage = "https://github.com/your-org/r2d2"
repository = "https://github.com/your-org/r2d2"

[project.scripts]
r2d2 = "r2d2.cli:run"
r2d2-web = "r2d2.web.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/r2d2"]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<0.24",
  "pytest-cov>=4.1,<5",
  "pytest-mock>=3.12,<4",
  "httpx>=0.27,<0.28",
  "ruff>=0.4.2,<0.5",
  "mypy>=1.9,<2"
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external tools)",
    "slow: Slow tests that should be run less frequently",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/r2d2"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
